[package]
name = "stackline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.6"
enum_dispatch = "0.3"
veccell = { version = "0.4.0", features = ["serde"] }
pathfinding = "3.0"
colored = "2.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
serde_json = "1.0"

[build-dependencies]
syn = {version = "1.0", features = ["full", "parsing"] }

[[bench]]
name = "dispatch"
harness = false
